--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-native-svg-transformer": "^0.14.3",
     "react-redux": "^7.2.4",
     "redux": "^4.1.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "styled-components": "^5.2.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
